--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -13,7 +13,11 @@
         <main>
             <section>Hero section</section>
             <section>Services section</section>
-            <section>Works section</section>
+            <section>Works section
+                <article>Work 1</article>
+                <article>Work 2</article>
+                <article>Work 3</article>
+            </section>
             <section>About section</section>
             <section>Latest news section
                 <article>Article 1</article>
