--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -77,9 +77,9 @@
             </section>
             <section>
                 <div>
-                    <div>
-                        <h2>latest news</h2>
-                    </div>
+                    <header>
+                        <h2>Latest news</h2>
+                    </header>
                     <div>
                         <article>
                             <p>Career</p>
@@ -101,10 +101,10 @@
             </section>
             <section>
                 <div>
-                    <div>
+                    <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
-                    </div>
+                    </header>
                     <div>
                         <article>Testimonial 1</article>
                         <article>Testimonial 2</article>
@@ -114,10 +114,10 @@
             </section>
             <section>
                 <div>
-                    <div>
+                    <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
-                    </div>
+                    </header>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
