--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,14 +9,14 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <!--Header-->
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
                 <nav></nav>
             </div>
         </header>
-        <!--Main-->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
             <!-- Hero section -->
@@ -60,13 +60,13 @@
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
-                </div>
+            </div>
             </section>
-            <!--About Us section-->
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -76,17 +76,15 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                        <h3>Our culture</h3>
-                        <h3>How we work</h3>
                     </div>
-                </div>
+            </div>
             </section>
-            <!--Latest news section-->
+            <!-- Latest news section -->
             <section>
                 <div>
-                    <div>
-                        <h2>latest news</h2>
-                    </div>
+                    <header>
+                        <h2>Latest news</h2>
+                    </header>
                     <div>
                         <article>
                             <p>Career</p>
@@ -104,15 +102,15 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
-                </div>
+            </div>
             </section>
-            <!--Testimonials section-->
+            <!-- Testimonials section -->
             <section>
                 <div>
-                    <div>
+                    <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
-                    </div>
+                    </header>
                     <div>
                         <article>Testimonial 1</article>
                         <article>Testimonial 2</article>
@@ -120,20 +118,20 @@
                     </div>
                 </div>
             </section>
-            <!--Contact section-->
+            <!-- Contact section -->
             <section>
                 <div>
-                    <div>
+                    <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
-                    </div>
+                    </header>
                     <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>    
                     </div>
                 </div>
             </section>
         </main>
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
