--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -9,19 +9,23 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
                 <nav></nav>
             </div>
         </header>
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
+            <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
             </section>
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
@@ -38,6 +42,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -55,12 +60,13 @@
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
-                </div>
+            </div>
             </section>
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -70,11 +76,10 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                        <h3>Our culture</h3>
-                        <h3>How we work</h3>
                     </div>
-                </div>
+            </div>
             </section>
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -97,8 +102,9 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
-                </div>
+            </div>
             </section>
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -112,6 +118,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
@@ -119,11 +126,12 @@
                         <p>We like to know new people</p>
                     </header>
                     <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>    
                     </div>
                 </div>
             </section>
         </main>
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
