--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -9,7 +9,7 @@
     <header class="header">
       <div>
         <div>
-          <div><a href="#" alt="Name of the logo"><img src="img/logo.png"></a></div>
+          <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
           <nav class="nav">
             <div>
               <p><a href="#">Home</a></p>
@@ -34,7 +34,7 @@
               <span>Philip Gilbert</span>
               <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
             </div>
-            <div class="col-6"><img class="img-fluid" alt="" src="hero-img.png"></div>
+            <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
           </div>
         </div>
       </section>
@@ -76,7 +76,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <div class="section">
         <div class="container">
           <div class="row">
             <div class="col-lg-3">
@@ -89,7 +89,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="container">
           <div class="row">
@@ -156,16 +156,8 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                  <label for="email" class="visually-hidden">Enter Email Address</label>
-                  <input
-                    class="form-control"
-                    type="email"
-                    name="email"
-                    id="email"
-                    autocomplete="email"
-                    required
-                    aria-required="true"
-                  >
+                  <label for="email" class="visually-hidden"></label>
+                  <input class="form-control" type="email" autocomplete="email" required aria-required="true" name="email" id="email">
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
@@ -175,14 +167,7 @@
             <div class="footer-widget">
               <span>Follow Me</span>
               <p>Let us be social</p>
-              <div>
-                <a href="#" aria-label="Facebook">
-                  <i class="facebook-icon">Facebook</i>
-                </a>
-                <a aria-label="Twitter" href="#">
-                  <i class="twitter-icon">Twitter</i>
-                </a>
-              </div>
+              <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a></div>
             </div>
           </div>
         </div>
